mac addons manager: installed state is not indicated correctly
Not directly after the install, not after a restart.
Not directly after the install, not after a restart.
assigned to @dfuhrmann and unassigned @MigrationBot
commit 44e1e3c7 Author: David Fuhrmann dfuhrmann@videolan.org Date: Sun May 11 19:49:00 2014 +0200
macosx: addons: add a new addon class for the model representation
Also loads the locally installed addons properly to mark these ones
as installed.
close [#11476](https://code.videolan.org/videolan/vlc/-/issues/11476)
Original author: dfuhrmann@videolan.org
added Status::fixed label
closed
VideoLAN code repository instance