macosx: addons: add a new addon class for the model representation

Also loads the locally installed addons properly to mark these ones
as installed.

close #11476